# structflo-ner

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: 01_quickstart.ipynb  02_fast_ner.ipynb
structflo/ner/: __init__.py  _display.py  _entities.py  _examples.py  _mapping.py  _prompts.py  extractor.py  profiles.py
structflo/ner/fast/: README.md  __init__.py  _loader.py  _matcher.py  _normalize.py  extractor.py
structflo/ner/fast/gazetteers/: accession_number.yml  compound_name.yml  disease.yml  functional_category.yml  gene_name.yml  product.yml  screening_method.yml  strain.yml  target.yml
tests/: test_entities.py  test_extractor.py  test_fast.py
